# smv-peru

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: campos-2d.md  campos-2f.md  conceptos.md  guia.md  performance.md
examples/: demo.py
scripts/: smoke_test.py
src/smv_peru/: __init__.py  client.py  csv_export.py  empresas.py  excel.py
tests/: test_2f_individual_schema.py  test_amount.py  test_cache_dir.py  test_call_smv.py  test_cascade_by_period.py  test_cf_method.py  test_csv_export.py  test_empresas.py  test_excel.py  test_fetch_bbva.py  test_fetch_estados_financieros.py  test_fetch_fundamentals.py  test_fetch_multi.py  test_ltm.py  test_map_period.py  test_map_year.py  test_progress.py  test_raw_accounts.py  test_soap_envelope.py
tests/fixtures/: obtener_BalanceGeneral_2021_C_A.json  obtener_BalanceGeneral_2022_C_A.json  obtener_BalanceGeneral_2023_C_1.json  obtener_BalanceGeneral_2023_C_2.json  obtener_BalanceGeneral_2023_C_3.json  obtener_BalanceGeneral_2023_C_4.json  obtener_BalanceGeneral_2023_C_A.json  obtener_BalanceGeneral_2024_C_A.json  obtener_FlujoEfectivo_2021_C.json  obtener_FlujoEfectivo_2022_C.json  obtener_FlujoEfectivo_2023_C.json  obtener_FlujoEfectivo_2023_C_1.json  obtener_FlujoEfectivo_2023_C_2.json  obtener_FlujoEfectivo_2023_C_3.json  obtener_FlujoEfectivo_2023_C_4.json  obtener_FlujoEfectivo_2024_C_A.json  obtener_GanciaPerdida_2021_C.json  obtener_GanciaPerdida_2022_C.json  obtener_GanciaPerdida_2023_C.json  obtener_GanciaPerdida_2023_C_1.json  obtener_GanciaPerdida_2023_C_2.json  obtener_GanciaPerdida_2023_C_3.json  obtener_GanciaPerdida_2023_C_4.json  obtener_GanciaPerdida_2024_C_A.json
