[project]
name = "smv-peru"
version = "0.1.0"
description = "Cliente Python para los datos financieros públicos de la Superintendencia del Mercado de Valores del Perú (SMV)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smv_peru"]
